test/fail/event-with-invalid-action.app
//No function or page 'test' with signature
application test

  define page root(){
    action tst(){}
  
    block[onclick := test()]{"bla"}
  }